<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.americanfootballcounterpoints.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teamA"
                android:textAlignment="center"
                android:textSize="@dimen/team_string"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/teamACounterTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/initValuePoints"
                android:textSize="@dimen/team_points"
                android:fontFamily="sans-serif-light"
                android:textAlignment="center"
                android:onClick="addTeamATouchdown"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp" />

            <Button
                android:id="@+id/touchdownATeamButtonView"
                android:text="@string/touchdownButtonText"
                android:onClick="addTeamATouchdown"
                style="@style/customButton"/>

            <Button
                android:id="@+id/fieldGoalATeamButtonView"
                android:text="@string/fieldGoalButtonText"
                android:onClick="addTeamFieldGoalTeamA"
                style="@style/customButton"/>

            <Button
                android:id="@+id/defensiveATeamTackleButton"
                android:text="@string/defensiveTackleButtonText"
                android:onClick="addDefensiveTackleTeamA"
                style="@style/customButton" />

            <Button
                android:id="@+id/extraPointATeamButton"
                android:text="@string/extraPointButtonText"
                android:onClick="addTeamExtraPointTeamA"
                style="@style/customButton" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_dark" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teamB"
                android:textAlignment="center"
                android:textSize="@dimen/team_string"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/teamBCounterTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/initValuePoints"
                android:textSize="@dimen/team_points"
                android:fontFamily="sans-serif-light"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp" />

            <Button
                android:id="@+id/touchdownBTeamButtonView"
                android:text="@string/touchdownButtonText"
                android:onClick="addTeamBTouchdown"
                style="@style/customButton"/>

            <Button
                android:id="@+id/fieldGoalBTeamButtonView"
                android:text="@string/fieldGoalButtonText"
                android:onClick="addTeamFieldGoalTeamB"
                style="@style/customButton"/>

            <Button
                android:id="@+id/defensiveBTeamTackleButton"
                android:text="@string/defensiveTackleButtonText"
                android:onClick="addDefensiveTackleTeamB"
                style="@style/customButton" />

            <Button
                android:id="@+id/extraPointBTeamButton"
                android:text="@string/extraPointButtonText"
                android:onClick="addTeamExtraPointTeamB"
                style="@style/customButton"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/resetPointsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resetButtonText"
        android:onClick="resetPoints"
        android:layout_weight="1"/>

</LinearLayout>
